# apur

./: .gitignore  Cargo.toml  LICENSE
apur_model/: Cargo.toml
apur_model/src/: lib.rs  lights.rs  loader.rs  mesh.rs  prefabs.rs
apur_physics/: Cargo.toml
apur_renderer/: Cargo.toml
apur_renderer/res/: shader.frag  shader.vert
apur_renderer/res/models/: Planks_of_wood.mtl  Pony_cartoon.mtl  Transport Shuttle_obj.mtl  Transport_Shuttle_obj.mtl  earth.mtl  plane.mtl  sponza.mtl  zbot.gltf
apur_renderer/res/shaders/: combined.frag  combined.frag.spv  combined.vert.spv  compile.bat  diffuse.frag  diffuse.frag.spv  diffuse.vert.spv  fixed_albedo.frag.spv  fixed_albedo.vert  fixed_albedo.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  (+9 more)
apur_renderer/src/: application.rs  bind_group.rs  buffer.rs  camera.rs  engine.rs  error.rs  lib.rs  main.rs  material_manager.rs  mesh.rs  model_importer.rs  pipeline.rs  renderable.rs  rendering.rs  shader.rs  texture.rs  texture_manager.rs  world.rs
examples/: comp_shader.rs  shadow.rs  shadows.rs  solid_shader.rs  transparent.rs
examples/shadows/: shadows.rs
res/: shader.frag  shader.vert
res/shaders/: collatz.comp  combined.frag  compile.bat  compile.ps1  compile.sh  shadow.frag  shadow.vert  solid.frag  solid_metal.frag  transparent.vert
src/: future.rs  lib.rs  light.rs  main.rs  math.rs  shader.rs
src/mesh/: mod.rs  prefabs.rs
src/renderer/: application.rs  bind_group.rs  buffer.rs  camera.rs  error.rs  event_handler.rs  mod.rs  pipeline.rs
(+25 files in other folders)
